# churn-system

./: .gitignore  dockerfile  justfile  pyproject.toml
app/: inference_api.py  training_endpoint.py
artifacts/preprocessor/: preprocessor.pkl
conf/: config.yaml
conf/data_ops/: data_ops.yaml
conf/model_ops/: model_ops.yaml
conf/paths/: paths.yaml
conf/pipeline/: pipeline.yaml
data/processed/: test_processed.parquet  train_processed.parquet
data/raw/: raw.parquet
src/churn_system/: __init__.py
src/churn_system/datamodels/: config_model.py  raw_data_model.py
src/churn_system/pipelines/: feature_pipeline.py  inference_pipeline.py  training_pipeline.py
src/churn_system/scripts/: data_loader.py  data_processor.py  data_validator.py
src/churn_system/utils/: feature_store_utils.py  infer_utils.py
